# MES

./: .gitignore  CMakeLists.txt  Makefile  dokumentacja_MES.tex  results.csv  results_transient.csv  visualize_temperature.py  visualize_temperature_transient.py
config/: fem_config.txt
data/: transient_results.csv
grids/: Test2_4_4_MixGrid_VarBC.txt  WindowPane_Glass_Air_Glass.txt
scripts/: build-run.sh  build.sh  clean.sh  generate_frame.py  generate_window_system.py  run.sh  visualize_interactive.py  visualize_transient.py
src/: Config.cpp  Config.h  Element.cpp  Element.h  EquationSystem.cpp  EquationSystem.h  GaussianIntegration.cpp  GaussianIntegration.h  GlobalData.cpp  GlobalData.h  Grid.cpp  Grid.h  GridSelector.cpp  GridSelector.h  Node.cpp  Node.h  Utils.cpp  Utils.h  main.cpp
src/archive/: gridSelection.cpp
